Fixed overflow bug on mobile

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -20,7 +20,15 @@ body {
 	background-size: 120px;
 	font-family: $font-content;
 	font-size: 1.8rem;
+}
+
+.wrapper {
 	overflow-x: hidden;
+}
+
+html, body, .wrapper {
+	width: 100%;
+	height: 100%;
 }
 
 /* TOP */
@@ -130,6 +138,7 @@ body {
 .header-title {
 	font-size: 7rem;
 	padding: 60px;
+	margin-bottom: 40px;
 }
 
 .header-title, .header-content {
@@ -139,6 +148,8 @@ body {
 /* CONTAINER */
 
 .container {
+	width: 100%;
+	height: 100%;
 	position: relative;
 	transition: margin .7s ease;
 }
@@ -186,15 +197,17 @@ body {
 
 .screen-img {
 	img {
-		width: 100%;
+		height: 100%;
 	}
 }
 
 .home {
 	.screen-img {
-		width: 730px;
+		min-width: 70vh;
+		height: 70vh;
 		margin: 0 auto;
-		padding-top: 20vh;
+		padding-top: 15vh;
+		text-align: center;
 	}
 }
 
@@ -208,4 +221,18 @@ body {
 
 .photos {
 	margin-left: 300vw;
+}
+
+/* FORMS */
+
+form {
+	.button {
+		background-color: transparent;
+		background-image: url('../images/btn_submit.png');
+		width: 300px;
+		height: 74px;
+		border: none;
+		padding-bottom: 13px;
+		cursor: pointer;
+	}
 }
